# spondex

./: .gitignore  CLAUDE.md  LICENSE  README.EN.md  README.md  pyproject.toml
.github/workflows/: publish.yml
dashboard/: tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: api.ts  types.ts
dashboard/src/components/: ConfigPanel.tsx
docs/: CLI.md
scripts/: build.sh
src/dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
src/dashboard/src/: App.tsx  api.ts  main.tsx  useWebSocket.ts
src/dashboard/src/components/: AnimatedBackground.tsx  ChartPanel.tsx  ConfigPanel.tsx  Controls.tsx  StatsBar.tsx  StatusCard.tsx  SyncHistory.tsx  TrackTable.tsx  UnmatchedTable.tsx
src/dashboard/src/styles/: animations.css  global.css
src/spondex/: cli.py  config.py  daemon.py  logging.py  wizard.py
src/spondex/server/: dashboard.py  rpc.py
src/spondex/storage/: __init__.py  database.py  models.py
src/spondex/sync/: __init__.py  differ.py  engine.py  scheduler.py  spotify.py  yandex.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_dashboard.py  test_differ.py  test_engine.py  test_integration.py  test_logging.py  test_rpc.py  test_scheduler.py  test_spotify.py  test_storage.py  test_wizard.py  test_yandex.py
