[project]
name = "spondex"
version = "0.1.0"
description = "CLI daemon for syncing music libraries between Yandex Music and Spotify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=23.0",
    "spotipy>=2.25.2",
    "yandex-music",
    "aiosqlite>=0.19",
]

[project.scripts]
spondex = "spondex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spondex"]

[tool.uv.sources]
yandex-music = { git = "https://github.com/MarshalX/yandex-music-api.git" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
