[project]
name = "spondex"
version = "0.1.0"
description = "CLI daemon for syncing music libraries between Yandex Music and Spotify"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "structlog>=23.0",
    "spotipy>=2.25.2",
    "yandex-music",
    "aiosqlite>=0.19",
]

[project.scripts]
spondex = "spondex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spondex"]

[tool.uv.sources]
yandex-music = { git = "https://github.com/MarshalX/yandex-music-api.git" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pytest-cov>=4.0",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "C4", "SIM"]
ignore = ["ANN401", "S101", "S608"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "ANN", "ARG"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true

[tool.coverage.run]
source = ["spondex"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if TYPE_CHECKING:"]
